--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -1,4 +1,26 @@
 jobs:
+- name: create-product-1.8
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_8
+    params:
+      pre: build
+  - put: version_1_8
+    params:
+      file: version/number
+  - get: ops-manager-example
+    resource: ops-manager-example-1.8
+    trigger: true
+  - task: ensure-versions-match
+    file: ops-manager-example/ci/tasks/ensure-versions-match.yml
+  - task: generate-example-product
+    privileged: true
+    file: ops-manager-example/ci/tasks/generate-example-product.yml
+  - put: generated-example-product-1.8
+    params:
+      from: example-product-output/example-product-(.*).pivotal
+
 - name: create-product-1.7
   serial: true
   plan:
@@ -113,12 +135,44 @@ jobs:
     params:
       file: version/number
 
+- name: after-release-1.7
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_7
+    params:
+      bump: final
+
+  - put: version_1_7
+    params:
+      file: version/number
+
+  - get: version
+    resource: version_1_7
+    params:
+      bump: patch
+      pre: build
+
+  - put: version_1_7
+    params:
+      file: version/number
+
+  - put: version_1_7
+    params:
+      file: version/number
+
 resources:
-- name: ops-manager-example-1.7
+- name: ops-manager-example-1.8
   type: git
   source:
     private_key: {{ops-manager-example-git-key}}
     branch: master
+    uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
+- name: ops-manager-example-1.7
+  type: git
+  source:
+    private_key: {{ops-manager-example-git-key}}
+    branch: releases/1.7
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
 - name: ops-manager-example-1.6
   type: git
@@ -132,6 +186,13 @@ resources:
     private_key: {{ops-manager-example-git-key}}
     branch: releases/1.5
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
+- name: generated-example-product-1.8
+  type: s3
+  source:
+    regexp: example-product-(1\.8.*).pivotal
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
 - name: generated-example-product-1.7
   type: s3
   source:
@@ -153,6 +214,14 @@ resources:
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
     bucket: {{pivotal-files-bucket}}
+- name: version_1_8
+  type: semver
+  source:
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
+    key: releases/1.8/version
+    initial_version: 1.8.0-build.0
 - name: version_1_7
   type: semver
   source:
