--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -24,4 +24,6 @@ builds:
     version: '11'
   c93c7d49-be53-46ca-a4cc-15b2dfadfe1e:
     version: '12'
+  f8f19dfe-e303-4301-9829-01c752cee4db:
+    version: '13'
 format-version: '2'
