Make the genre dropdown optional
- This broke ci because on upgrade the default value does not get populated on
existing records within the collection

[#117832525]

Signed-off-by: Andrew Cantino <acantino@pivotal.io>

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -260,6 +260,7 @@ property_blueprints:
       - name: genre
         type: dropdown_select
         configurable: true
+        optional: true
         options:
           - name: rock
             label: 'Rock'
