Make vm type and disk type fields optional

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -263,10 +263,12 @@ property_blueprints:
         optional: true
       - name: vm_type
         type: vm_type_dropdown
+        optional: true
         configurable: true
       - name: disk_type
         type: disk_type_dropdown
         configurable: true
+        optional: true
       - name: genre
         type: dropdown_select
         configurable: true
