--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -44,4 +44,8 @@ builds:
     version: ade9ac368ac6aa8ea7b99839af9d67ca76b3447e
     sha1: c7588d77687a4c496bd52d6a73e65c4df74b6a0d
     blobstore_id: 39bf3223-a883-472f-af59-6ca956e8dfe0
+  0c71d3e824ebc37ce9b1bfa18a95cbaaf6875283:
+    version: 0c71d3e824ebc37ce9b1bfa18a95cbaaf6875283
+    sha1: d330ae13dd1f820d8145bf4bac6227cb8636e23f
+    blobstore_id: 7092f233-5053-42b7-a8b0-0846c9d75ef5
 format-version: '2'
