--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -26,4 +26,6 @@ builds:
     version: '12'
   f8f19dfe-e303-4301-9829-01c752cee4db:
     version: '13'
+  4a368f47-c49e-4ac0-a348-a9effa304076:
+    version: '14'
 format-version: '2'
