Create bosh release 15
Signed-off-by: Andrew Cantino <acantino@pivotal.io>

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -28,4 +28,6 @@ builds:
     version: '13'
   4a368f47-c49e-4ac0-a348-a9effa304076:
     version: '14'
+  33deae98-0669-4418-9026-809a13df97f2:
+    version: '15'
 format-version: '2'
