--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: &to_version "1.6.13.0"
+to_version: &to_version "1.6.14.0"
 
 migrations:
   - from_version: "1.4.0.0"
@@ -431,7 +431,11 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
-
+  - from_version: "1.5.20.0"
+      rules:
+        - type: update
+          selector: "product_version"
+          to: *to_version      
   - from_version: "1.6.0.0"
     rules:
       - type: update
@@ -497,3 +501,8 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.6.13.0"
+      rules:
+        - type: update
+          selector: "product_version"
+          to: *to_version
