"Fix" the consumes section
* This may never have been broken due to bosh supporting "implicit" links

Signed-off-by: Caroline Taymor <ctaymor@pivotal.io>

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -420,7 +420,7 @@ job_types:
         provides: |
           web_server_info: (( .properties.example_selector.selected_option.parsed_manifest(provides_section) ))
         consumes: |
-          web_server_info: (( .properties.example_selector.selected_option.parsed_manifest(provides_section) ))
+          web_server_info: (( .properties.example_selector.selected_option.parsed_manifest(consumes_section) ))
       - name: time_logger
         release: example-release
     release: example-release
