--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -56,4 +56,8 @@ builds:
     version: f29c842e39e9ecf70f8aea4b2bc96730145d1dc3
     sha1: dff3feff0e2f69f6288d53f284a4b901db5b4f35
     blobstore_id: 0e754f43-0ae9-4116-b25f-d62f0eb06164
+  c662ab37a2bfc0422615d78c9278be307ac6024a:
+    version: c662ab37a2bfc0422615d78c9278be307ac6024a
+    sha1: af20fe07266feb12d32a01dc3297ecc238e5217b
+    blobstore_id: 9e784db3-fb77-4780-a7f4-8987f44840de
 format-version: '2'
