--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -285,8 +285,10 @@ property_blueprints:
     property_blueprints:
       - name: album
         type: string
+        freeze_on_deploy: true
       - name: artist
         type: string
+        freeze_on_deploy: true
       - name: explicit
         type: boolean
       - name: secret_meaning
