--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: &to_version "1.6.15.0"
+to_version: &to_version "1.6.16-alpha"
 
 migrations:
   - from_version: "1.4.0.0"
@@ -508,6 +508,11 @@ migrations:
         selector: "product_version"
         to: *to_version
   - from_version: "1.6.14.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+  - from_version: "1.6.15.0"
     rules:
       - type: update
         selector: "product_version"
