Add freeze_on_deploy configuration for selector sub-property [#121009367]
Signed-off-by: Ben Watts <bwatts@pivotal.io>

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -196,6 +196,7 @@ property_blueprints:
     type: selector
     configurable: true
     default: Pizza
+    freeze_on_deploy: true
     option_templates:
       - name: pizza_option
         select_value: Pizza
@@ -216,6 +217,7 @@ property_blueprints:
           - name: pepperoni
             type: boolean
             configurable: true
+            freeze_on_deploy: true
           - name: pineapple
             type: boolean
             configurable: true
