--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -7,6 +7,28 @@
 #   in the releases/1.7 branch.)
 
 jobs:
+- name: create-product-1.9
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_9
+    params:
+      pre: build
+  - put: version_1_9
+    params:
+      file: version/number
+  - get: ops-manager-example
+    resource: ops-manager-example-1.9
+    trigger: true
+  - task: ensure-versions-match
+    file: ops-manager-example/ci/tasks/ensure-versions-match.yml
+  - task: generate-example-product
+    privileged: true
+    file: ops-manager-example/ci/tasks/generate-example-product.yml
+  - put: generated-example-product-1.9
+    params:
+      from: example-product-output/example-product-(.*).pivotal
+
 - name: create-product-1.8
   serial: true
   plan:
@@ -170,11 +192,17 @@ jobs:
       file: version/number
 
 resources:
-- name: ops-manager-example-1.8
+- name: ops-manager-example-1.9
   type: git
   source:
     private_key: {{ops-manager-example-git-key}}
     branch: master
+    uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
+- name: ops-manager-example-1.8
+  type: git
+  source:
+    private_key: {{ops-manager-example-git-key}}
+    branch: releases/1.8
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
 - name: ops-manager-example-1.7
   type: git
@@ -194,6 +222,13 @@ resources:
     private_key: {{ops-manager-example-git-key}}
     branch: releases/1.5
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
+- name: generated-example-product-1.9
+  type: s3
+  source:
+    regexp: example-product-(1\.9.*).pivotal
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
 - name: generated-example-product-1.8
   type: s3
   source:
@@ -222,6 +257,14 @@ resources:
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
     bucket: {{pivotal-files-bucket}}
+- name: version_1_9
+  type: semver
+  source:
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
+    key: releases/1.9/version
+    initial_version: 1.9.0-build.0
 - name: version_1_8
   type: semver
   source:
