--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -9,7 +9,7 @@ rank: 1
 service_broker: false # Default value
 stemcell_criteria:
   os: ubuntu-trusty
-  version: "3262.2" # Bosh stemcell should match Ops Manager with same version
+  version: "3262.7" # Bosh stemcell should match Ops Manager with same version
 
   # allows you to opt-out of the default behaviour of Ops Manager 1.8 to always
   # use the latest patch update of an available stemcell version. Set to 'false'
@@ -408,6 +408,7 @@ job_types:
     dynamic_ip: 1
     max_in_flight: 1
     single_az_only: true
+    default_internet_connected: false
     instance_definition:
       name: instances
       configurable: false
@@ -442,6 +443,7 @@ job_types:
     dynamic_ip: 0
     max_in_flight: 1
     single_az_only: true
+    default_internet_connected: false
     instance_definition:
       name: instances
       configurable: true
@@ -691,6 +693,7 @@ job_types:
     dynamic_ip: 1
     max_in_flight: 2
     single_az_only: false
+    default_internet_connected: false
     instance_definition:
       name: instances
       configurable: true
