--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -689,7 +689,7 @@ job_types:
         release: example-release
     static_ip: 0
     dynamic_ip: 1
-    max_in_flight: 2
+    max_in_flight: 100%
     single_az_only: false
     instance_definition:
       name: instances
