--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -532,3 +532,10 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+                to: *to_version
+  - from_version: "1.6.19.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+
