--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,7 +1,7 @@
 ---
 name: example-product
-product_version: "1.8.0.0-alpha"
-minimum_version_for_upgrade: "1.7.0.0"
+product_version: "1.8.0"
+minimum_version_for_upgrade: "1.7.0"
 metadata_version: "1.8"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
@@ -9,7 +9,7 @@ rank: 1
 service_broker: false # Default value
 stemcell_criteria:
   os: ubuntu-trusty
-  version: "3262.7" # Bosh stemcell should match Ops Manager with same version
+  version: "3262.12" # Bosh stemcell should match Ops Manager with same version
 
   # allows you to opt-out of the default behaviour of Ops Manager 1.8 to always
   # use the latest patch update of an available stemcell version. Set to 'false'
