--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: &to_version "1.6.25"
+to_version: &to_version "1.6.26-alpha"
 
 migrations:
   - from_version: "1.4.0.0"
@@ -558,6 +558,11 @@ migrations:
         selector: "product_version"
         to: *to_version
   - from_version: "1.6.24.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+  - from_version: "1.6.25.0"
     rules:
       - type: update
         selector: "product_version"
