--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,8 +1,8 @@
 ---
 name: example-product
-product_version: "1.8.10-alpha"
+product_version: "1.9.0"
 minimum_version_for_upgrade: "1.7.0"
-metadata_version: "1.8"
+metadata_version: "1.9"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
 rank: 1
@@ -11,7 +11,7 @@ stemcell_criteria:
   os: ubuntu-trusty
   version: "3263.8" # Bosh stemcell should match Ops Manager with same version
 
-  # allows you to opt-out of the default behaviour of Ops Manager 1.8 to always
+  # allows you to opt-out of the default behaviour of Ops Manager 1.8+ to always
   # use the latest patch update of an available stemcell version. Set to 'false'
   # to use the exact version match of the stemcell.
   #
