Create new final release and use it in example product [#128698623]
Signed-off-by: Matt Royal <mroyal@pivotal.io>

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -60,4 +60,8 @@ builds:
     version: c662ab37a2bfc0422615d78c9278be307ac6024a
     sha1: af20fe07266feb12d32a01dc3297ecc238e5217b
     blobstore_id: 9e784db3-fb77-4780-a7f4-8987f44840de
+  a797ed1256ec21731157a52958d879394e19ce72:
+    version: a797ed1256ec21731157a52958d879394e19ce72
+    sha1: e1aea4c43b158bc2b14f7f0a08bc509ebbaf74ad
+    blobstore_id: 3a91a76d-6ee6-427e-a66c-bbfb605826f1
 format-version: '2'
